Fix Horizontal Overflow on mobile (#25)

--- a/src/pages/components/HeroSection/HeroSection.module.css
+++ b/src/pages/components/HeroSection/HeroSection.module.css
@@ -443,6 +443,11 @@
 }
 
 @media (max-width: 768px) {
+  .heroContainer {
+    padding-top: 2rem;
+    overflow: hidden;
+  }
+  
   .screenshotContainer {
     width: 90%;
     position: relative;
